Página do arroz completa.

--- a/recipes/arroz.html
+++ b/recipes/arroz.html
@@ -8,5 +8,24 @@
 </head>
 <body>
     <h1>Arroz</h1>
+    <img src="images/Arroz.jpg" style="width: 400px;" alt="Imagem do arroz pronto">
+    <h3>Ingredientes</h3>
+    <ul>
+        <li>2 Xícaras de arroz;</li>
+        <li>3 Xícaras de água;</li>
+        <li>2 Colheres de chá de óleo</li>
+        <li>Alho a gosto;</li>
+        <li>Sal a gosto;</li>
+        <li>Outros temperos a gosto.</li>
+    </ul>
+
+    <h3>Passo a passo:</h3>
+    <ol>
+        <li>Pegue uma panela, coloque o óleo e ligue o fogão;</li>
+        <li>Coloque o alho e fique mexendo até dourar;</li>
+        <li>Despeje todo o arroz e logo em seguida a água;</li>
+        <li>Deixe em fogo baixo até a água secar.</li>
+        <li>Desligue o fogo.</li>
+    </ol>
 </body>
 </html>
