Página batata doce pronta, voltar adicionado a página do arroz

--- a/recipes/arroz.html
+++ b/recipes/arroz.html
@@ -27,5 +27,6 @@
         <li>Deixe em fogo baixo até a água secar.</li>
         <li>Desligue o fogo.</li>
     </ol>
+    <a href="../index.html">Voltar</a>
 </body>
 </html>
