--- a/recipes/batataDoce.html
+++ b/recipes/batataDoce.html
@@ -8,5 +8,21 @@
 </head>
 <body>
     <h1>Batata Doce Cozida</h1>
+    <img src="images/batataDoce.jpg" style="width: 400px;" alt="imagem da batata doce cozida.">
+    <h3>Ingredientes:</h3>
+    <ul>
+        <li>Batata Doce</li>
+        <li>Água</li>
+    </ul>
+    <h3>Passo a passo:</h3>
+    <ol>
+        <li>Coloque as batatas doces em uma panela que caibam completamente;</li>
+        <li>Cubra com água as batatas na panela;</li>
+        <li>Coloque no fogão e acenda, após ferver deixe aproximadamente 30 minutos;</li>
+        <li>Verifique de tempos em tempos com o garfo, se estiver mole, pode desligar;</li>
+        <li>Retire da água e está pronta para comer.</li>
+    </ol>
+    <a href="../index.html">Voltar</a>
+
 </body>
 </html>
