Pagina do frango grelhado, adicionada

--- a/recipes/frango.html
+++ b/recipes/frango.html
@@ -8,5 +8,21 @@
 </head>
 <body>
     <h1>Frango Grelhado</h1>
+    <img src="images/Frango.jpeg" style="width: 400px;" alt="imagem do frango grelhado.">
+    <h3>Ingredientes:</h3>
+    <ul>
+        <li>Frango;</li>
+        <li>Margarina;</li>
+        <li>Tempero a gosto (sal e alho, recomendados).</li>
+    </ul>
+    <h3>Passo a passo:</h3>
+    <ol>
+        <li>Coloque a margarina em uma frigideira e aqueça até derreter;</li>
+        <li>Coloque o frango quando a margarina já estiver completamente derretida;</li>
+        <li>Espera um pouco, e verifique a parte em contato com a frigideira;</li>
+        <li>Quando a parte de baixo estiver boa, vire o frango e repita o processo 3;</li>
+        <li>Pronto, retire o frango e sirva-se.</li>
+    </ol>
+    <a href="../index.html">Voltar</a>
 </body>
 </html>
