Stylingthe index page with some css

--- a/index.html
+++ b/index.html
@@ -4,14 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/index.css">
     <title>Receitas</title>
 </head>
 <body>
-    <h1>Odin Recipes:</h1>
-    <ul>
-        <li><a href="recipes/arroz.html">Arroz</a>;</li>
-        <li><a href="recipes/batataDoce.html">Batata Doce Cozida</a></li>
-        <li><a href="recipes/frango.html">Frango Grelhado</a></li>
-    </ul>
+    <header><h1>Odin Recipes:</h1></header>
+    
+    <div class="recipeBox">
+        <a href="recipes/arroz.html">
+            <div class="recipeCard">
+                <h3>Arroz</h3>
+                <hr>
+                <img src="images/Arroz.jpg" alt="Imagem do arroz pronto">
+            </div>
+        </a>
+        <a href="recipes/batataDoce.html">
+            <div class="recipeCard">
+                <h3>Batata Doce Cozida</h3>
+                <hr>  
+                <img src="images/batataDoce.jpg" alt="imagem da batata doce cozida.">
+            </div>
+        </a>
+        <a href="recipes/frango.html">
+            <div class="recipeCard">
+                <h3>Frango Grelhado</h3>
+                <hr>
+                <img src="images/Frango.jpeg" alt="imagem do frango grelhado.">
+            </div>
+        </a>
+    </div>
 </body>
 </html>
