--- a/recipes/arroz.html
+++ b/recipes/arroz.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Arroz</h1>
-    <img src="images/Arroz.jpg" style="width: 400px;" alt="Imagem do arroz pronto">
+    <img src="../images/Arroz.jpg" style="width: 400px;" alt="Imagem do arroz pronto">
     <h3>Ingredientes</h3>
     <ul>
         <li>2 Xícaras de arroz;</li>
