--- a/recipes/batataDoce.html
+++ b/recipes/batataDoce.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Batata Doce Cozida</h1>
-    <img src="images/batataDoce.jpg" style="width: 400px;" alt="imagem da batata doce cozida.">
+    <img src="../images/batataDoce.jpg" style="width: 400px;" alt="imagem da batata doce cozida.">
     <h3>Ingredientes:</h3>
     <ul>
         <li>Batata Doce</li>
