--- a/recipes/frango.html
+++ b/recipes/frango.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Frango Grelhado</h1>
-    <img src="images/Frango.jpeg" style="width: 400px;" alt="imagem do frango grelhado.">
+    <img src="../images/Frango.jpeg" style="width: 400px;" alt="imagem do frango grelhado.">
     <h3>Ingredientes:</h3>
     <ul>
         <li>Frango;</li>
