--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Receitas</title>
 </head>
 <body>
+    <div class="tela"></div>
     <header><h1>Odin Recipes:</h1></header>
     
     <div class="recipeBox">
@@ -33,5 +34,7 @@
             </div>
         </a>
     </div>
+    <div class="circle"></div>
+    
 </body>
 </html>
